Style fixes (#316)
* fix wrong address in footer

* fix carousel text layout in mobile

* fix sponsor layout

* fix recent posts layout

* fix front page layout and add another button to application form

* fix big gaps in front page

* fix mobile navbar spacing

* fix overflowing content breadcrumbs

* fix weird spacing after breadcrumbs in content pages

* fix unreadable text in content page credits

--- a/assets/sass/box-image.scss
+++ b/assets/sass/box-image.scss
@@ -16,10 +16,6 @@
 	padding: 0 20px;
 }
 
-.box-image-text {
-	text-align: center;
-}
-
 .box-image-text:hover .text {
     position: absolute;
     transform: translate(0, 100%);
@@ -69,4 +65,11 @@
 	letter-spacing: 0.08em;
 	font-weight: 300;
 	font-size: 12px;
+}
+
+.box-image-text .image {
+	width: 100%;
+	img {
+		width: 100%;
+	}
 }
