--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -2,9 +2,10 @@
 
 #heading-breadcrumbs {
 	padding: 20px 0;
-	margin-bottom: 40px;
+	margin-bottom: 2em;
     background: none;
     background-color: var(--primary-accent);
+    word-wrap: break-word;
 }
 
 #heading-breadcrumbs h1 {
