--- a/assets/sass/dark.scss
+++ b/assets/sass/dark.scss
@@ -13,9 +13,7 @@
     --pagination-bg: #b8cee6;
     --link-hover-bg: #36669c;
     --navbar-focus: #1f3a58;
-
-    --pagefind-ui-text: var(--text-color);
-    --pagefind-ui-background: var(--background);
+    --bs-secondary-color: #bbb;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
